src/test/resources/invalid/shellSemanticErr/function/functionBadArgUse.wacc
# function parameter misuse

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

	int f(int x) is
    bool b = x && true ;
		return 0
	end
  int x = call f(0) 

